# metamod-p-old-deprecated-dont-use-iwont-work-on-this-anymore-dont-even-ask

hlsdk/common/: cvardef.h
hlsdk/dlls/: cbase.h
hlsdk/engine/: eiface.h
metamod/: Android.mk  CMakeLists.txt  Config.mak  Makefile  comp_dep.h  dllapi.cpp  engine_api.cpp  engineinfo.cpp  game_autodetect.cpp  game_support.cpp  h_export.cpp  log_meta.cpp  meta_api.h  meta_eiface.cpp  meta_eiface.h  metamod.cpp  mlist.cpp  mlist.h  mplugin.cpp  mplugin.h  mreg.cpp  osdep.cpp  osdep.h  osdep_linkent_linux.cpp  osdep_linkent_xash.cpp  osdep_p.cpp  sdk_util.h  support_meta.cpp  support_meta.h
